Fixed navbar mess on mobile

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -104,6 +104,16 @@ body {
   margin-top: 0 !important;
 }
 
+
+.mb-2 {
+  margin-bottom: 2px;
+}
+
+.px-10 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .btn-teal {
   background-color: teal !important;
   color: white !important;
